[package]
name = "dustcal"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.50.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
reqwest = { version = "0.13.2", features = ["json"] }
dotenvy = "0.15.7"
moka = { version = "0.12.15", features = ["future"] }
chrono = { version = "0.4.44", features = ["serde"] }
once_cell = "1.21.4"
